--- a/travis.yml
+++ b/travis.yml
@@ -38,29 +38,29 @@ services:
   - docker
   
 env:
-  - CONDA_RECIPE=bin/conda/vcs
-  - CONDA_RECIPE=bin/conda/python-scons
-    CONDA_VERSION=2
-  - CONDA_RECIPE=bin/conda/python-scons
-    CONDA_VERSION=3
-  - CONDA_RECIPE=bin/conda/scons-tools
-    CONDA_VERSION=2
-  - CONDA_RECIPE=bin/conda/scons-tools
-    CONDA_VERSION=3
-  - CONDA_RECIPE=bin/conda/python-parse
-    CONDA_VERSION=2
-  - CONDA_RECIPE=bin/conda/python-parse
-    CONDA_VERSION=3
-  - CONDA_RECIPE=bin/conda/llvm-suite
-  # - CONDA_RECIPE=bin/conda/glibc
-  - CONDA_RECIPE=bin/conda/libtoolchain
-    CONDA_VERSION=2
-  - CONDA_RECIPE=bin/conda/libtoolchain
-    CONDA_VERSION=3
-  - CONDA_RECIPE=bin/conda/python-toolchain
-    CONDA_VERSION=2
-  - CONDA_RECIPE=bin/conda/python-toolchain
-    CONDA_VERSION=3
+  # - CONDA_RECIPE=bin/conda/vcs
+  # - CONDA_RECIPE=bin/conda/python-scons
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=bin/conda/python-scons
+  #   CONDA_VERSION=3
+  # - CONDA_RECIPE=bin/conda/scons-tools
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=bin/conda/scons-tools
+  #   CONDA_VERSION=3
+  # - CONDA_RECIPE=bin/conda/python-parse
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=bin/conda/python-parse
+  #   CONDA_VERSION=3
+  # - CONDA_RECIPE=bin/conda/llvm-suite
+  # # - CONDA_RECIPE=bin/conda/glibc
+  # - CONDA_RECIPE=bin/conda/libtoolchain
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=bin/conda/libtoolchain
+  #   CONDA_VERSION=3
+  # - CONDA_RECIPE=bin/conda/python-toolchain
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=bin/conda/python-toolchain
+  #   CONDA_VERSION=3
   - CONDA_RECIPE=bin/conda/boost-suite
     CONDA_VERSION=2
     TRAVIS_WAIT=50
@@ -128,14 +128,14 @@ matrix:
            CONDA_VERSION=3
     - os: osx
       env: CONDA_RECIPE=bin/conda/llvm-suite
-    - os: osx
-      env: CONDA_RECIPE=bin/conda/boost-suite
-           CONDA_VERSION=2
-           TRAVIS_WAIT=50
-    - os: osx
-      env: CONDA_RECIPE=bin/conda/boost-suite
-           CONDA_VERSION=3
-           TRAVIS_WAIT=50
+    # - os: osx
+    #   env: CONDA_RECIPE=bin/conda/boost-suite
+    #        CONDA_VERSION=2
+    #        TRAVIS_WAIT=50
+    # - os: osx
+    #   env: CONDA_RECIPE=bin/conda/boost-suite
+    #        CONDA_VERSION=3
+    #        TRAVIS_WAIT=50
            
 install:
   - git clone https://github.com/StatisKit/travis-ci.git
