--- a/bin/conda/boost-suite/meta.yaml
+++ b/bin/conda/boost-suite/meta.yaml
@@ -33,8 +33,8 @@ outputs:
       - Library\lib\libboost_atomic* [win]
       - Library\bin\boost_atomic*    [win]
     requirements:
-      run_exports:
-        - {{ pin_subpackage("libboost_atomic", exact=True) }}
+      # run_exports:
+      #  - {{ pin_subpackage("libboost_atomic", exact=True) }}
   - name: libboost_chrono
     files:
       - lib/libboost_chrono*         [not win]
@@ -44,8 +44,8 @@ outputs:
     requirements:
       run:
         - {{ pin_subpackage("libboost_system", exact=True) }}
-      run_exports:
-        - {{ pin_subpackage("libboost_chrono", exact=True) }}
+      # run_exports:
+      #  - {{ pin_subpackage("libboost_chrono", exact=True) }}
   - name: libboost_container
     files:
       - lib/libboost_container*         [not win]
@@ -53,8 +53,8 @@ outputs:
       - Library\lib\libboost_container* [win]
       - Library\bin\boost_container*    [win]
     requirements:
-      run_exports:
-        - {{ pin_subpackage("libboost_container", exact=True) }}
+      # run_exports:
+      #  - {{ pin_subpackage("libboost_container", exact=True) }}
   - name: libboost_context
     files:
       - lib/libboost_context*         [not win]
@@ -68,8 +68,8 @@ outputs:
       - Library\lib\libboost_coroutine* [win]
       - Library\bin\boost_coroutine*    [win]
     requirements:
-      run_exports:
-        - {{ pin_subpackage("libboost_coroutine", exact=True) }}
+      # run_exports:
+      #  - {{ pin_subpackage("libboost_coroutine", exact=True) }}
       run:
         - {{ pin_subpackage("libboost_system", exact=True) }}
         - {{ pin_subpackage("libboost_chrono", exact=True) }}
@@ -82,8 +82,8 @@ outputs:
       - Library\lib\libboost_date_time* [win]
       - Library\bin\boost_date_time*   [win]
     requirements:
-      run_exports:
-        - {{ pin_subpackage("libboost_date_time", exact=True) }}
+      # run_exports:
+      #  - {{ pin_subpackage("libboost_date_time", exact=True) }}
   - name: libboost_filesystem
     files:
       - lib/libboost_filesystem*         [not win]
@@ -91,8 +91,8 @@ outputs:
       - Library\lib\libboost_filesystem* [win]
       - Library\bin\boost_filesystem*    [win]
     requirements:
-      run_exports:
-        - {{ pin_subpackage("libboost_filesystem", exact=True) }}
+      # run_exports:
+      #  - {{ pin_subpackage("libboost_filesystem", exact=True) }}
       run:
         - {{ pin_subpackage("libboost_system", exact=True) }}
   - name: libboost_graph
@@ -102,8 +102,8 @@ outputs:
       - Library\lib\libboost_graph* [win]
       - Library\bin\boost_graph*    [win]
     requirements:
-      run_exports:
-        - {{ pin_subpackage("libboost_graph", exact=True) }}
+      # run_exports:
+      #  - {{ pin_subpackage("libboost_graph", exact=True) }}
       run:
         - {{ pin_subpackage("libboost_regex", exact=True) }}
         - icu 58.*                  [linux]
@@ -120,8 +120,8 @@ outputs:
       - Library\lib\libboost_locale* [win]
       - Library\bin\boost_locale*    [win]
     requirements:
-      run_exports:
-        - {{ pin_subpackage("libboost_locale", exact=True) }}
+      # run_exports:
+      #  - {{ pin_subpackage("libboost_locale", exact=True) }}
       run:
         - {{ pin_subpackage("libboost_chrono", exact=True) }}
         - {{ pin_subpackage("libboost_thread", exact=True) }}
@@ -134,8 +134,8 @@ outputs:
       - Library\lib\libboost_log* [win]
       - Library\bin\boost_log*    [win]
     requirements:
-      run_exports:
-        - {{ pin_subpackage("libboost_log", exact=True) }}
+      # run_exports:
+      #  - {{ pin_subpackage("libboost_log", exact=True) }}
       run:
         - {{ pin_subpackage("libboost_regex", exact=True) }}
         - {{ pin_subpackage("libboost_filesystem", exact=True) }}
@@ -152,8 +152,8 @@ outputs:
       - Library\lib\libboost_math* [win]
       - Library\bin\boost_math*    [win]
     requirements:
-      run_exports:
-        - {{ pin_subpackage("libboost_math", exact=True) }}
+      # run_exports:
+      #  - {{ pin_subpackage("libboost_math", exact=True) }}
   - name: libboost_program_options
     files:
       - lib/libboost_program_options*          [not win]
@@ -161,8 +161,8 @@ outputs:
       - Library\lib\libboost_program_options*  [win]
       - Library\bin\boost_program_options*     [win]
     requirements:
-      run_exports:
-        - {{ pin_subpackage("libboost_program_options", exact=True) }}
+      # run_exports:
+      #  - {{ pin_subpackage("libboost_program_options", exact=True) }}
   - name: libboost_python
     files:
       - lib/libboost_python*         [not win]
@@ -170,8 +170,8 @@ outputs:
       - Library\lib\libboost_python* [win]
       - Library\bin\boost_python*    [win]
     requirements:
-      run_exports:
-        - {{ pin_subpackage("libboost_python", exact=True) }}
+      # run_exports:
+      #  - {{ pin_subpackage("libboost_python", exact=True) }}
         - python
       run:
         - python
@@ -184,8 +184,8 @@ outputs:
       - Library\lib\libboost_random* [win]
       - Library\bin\boost_random*    [win]
     requirements:
-      run_exports:
-        - {{ pin_subpackage("libboost_random", exact=True) }}
+      # run_exports:
+      #  - {{ pin_subpackage("libboost_random", exact=True) }}
       run:
         - {{ pin_subpackage("libboost_system", exact=True) }}
   - name: libboost_regex
@@ -195,8 +195,8 @@ outputs:
       - Library\lib\libboost_regex* [win]
       - Library\bin\boost_regex*    [win]
     requirements:
-      run_exports:
-        - {{ pin_subpackage("libboost_regex", exact=True) }}
+      # run_exports:
+      #  - {{ pin_subpackage("libboost_regex", exact=True) }}
       run:
         - icu 58.*                  [linux]
   - name: libboost_serialization
@@ -210,8 +210,8 @@ outputs:
       - Library\lib\libboost_wserialization* [win]
       - Library\bin\boost_wserialization*    [win]
     requirements:
-      run_exports:
-        - {{ pin_subpackage("libboost_serialization", exact=True) }}
+      # run_exports:
+      #  - {{ pin_subpackage("libboost_serialization", exact=True) }}
       run:
         - icu 58.*                  [linux]
   - name: libboost_signals
@@ -221,8 +221,8 @@ outputs:
       - Library\lib\libboost_signals* [win]
       - Library\bin\boost_signals*    [win]
     requirements:
-      run_exports:
-        - {{ pin_subpackage("libboost_signals", exact=True) }}
+      # run_exports:
+      #  - {{ pin_subpackage("libboost_signals", exact=True) }}
   - name: libboost_system
     files:
       - lib/libboost_system*         [not win]
@@ -230,8 +230,8 @@ outputs:
       - Library\lib\libboost_system* [win]
       - Library\bin\boost_system*    [win]
     requirements:
-      run_exports:
-        - {{ pin_subpackage("libboost_system", exact=True) }}
+      # run_exports:
+      #  - {{ pin_subpackage("libboost_system", exact=True) }}
   - name: libboost_test
     files:
       - lib/libboost_unit_test_framework*          [not win]
@@ -243,8 +243,8 @@ outputs:
       - Library\lib\libboost_prg_exec_monitor*     [win]
       - Library\bin\boost_prg_exec_monitor*        [win]
     requirements:
-      run_exports:
-        - {{ pin_subpackage("libboost_test", exact=True) }}
+      # run_exports:
+      #  - {{ pin_subpackage("libboost_test", exact=True) }}
       run:
         - {{ pin_subpackage("libboost_timer", exact=True) }}
         - {{ pin_subpackage("libboost_system", exact=True) }}
@@ -257,8 +257,8 @@ outputs:
       - Library\lib\libboost_thread* [win]
       - Library\bin\boost_thread*    [win]
     requirements:
-      run_exports:
-        - {{ pin_subpackage("libboost_thread", exact=True) }}
+      # run_exports:
+      #  - {{ pin_subpackage("libboost_thread", exact=True) }}
       run:
         - {{ pin_subpackage("libboost_system", exact=True) }}
         - {{ pin_subpackage("libboost_chrono", exact=True) }}
@@ -271,8 +271,8 @@ outputs:
       - Library\lib\libboost_timer* [win]
       - Library\bin\boost_timer*    [win]
     requirements:
-      run_exports:
-        - {{ pin_subpackage("libboost_timer", exact=True) }}
+      # run_exports:
+      #  - {{ pin_subpackage("libboost_timer", exact=True) }}
       run:
         - {{ pin_subpackage("libboost_chrono", exact=True) }}
         - {{ pin_subpackage("libboost_system", exact=True) }}
@@ -283,8 +283,8 @@ outputs:
       - Library\lib\libboost_type_erasure* [win]
       - Library\bin\boost_type_erasure*    [win]
     requirements:
-      run_exports:
-        - {{ pin_subpackage("libboost_type_erasure", exact=True) }}
+      # run_exports:
+      #  - {{ pin_subpackage("libboost_type_erasure", exact=True) }}
       run:
         - {{ pin_subpackage("libboost_thread", exact=True) }}
         - {{ pin_subpackage("libboost_chrono", exact=True) }}
@@ -296,8 +296,8 @@ outputs:
       - Library\lib\libboost_wave* [win]
       - Library\bin\boost_wave*    [win]
     requirements:
-      run_exports:
-        - {{ pin_subpackage("libboost_wave", exact=True) }}
+      # run_exports:
+      #  - {{ pin_subpackage("libboost_wave", exact=True) }}
       run:
         - {{ pin_subpackage("libboost_filesystem", exact=True) }}
         - {{ pin_subpackage("libboost_thread", exact=True) }}
