--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,7 +35,7 @@ platform:
 
 environment:
   matrix:
-    # - CONDA_RECIPE: bin\conda\vcs
+    - CONDA_RECIPE: bin\conda\vcs
     - CONDA_RECIPE: bin\conda\python-scons
       CONDA_VERSION: 2
     # - CONDA_RECIPE: bin\conda\python-scons
@@ -68,8 +68,8 @@ environment:
       CONDA_VERSION: 2
     # - CONDA_RECIPE: share\git\conda-tools\bin\conda\conda-tools
     #   CONDA_VERSION: 3
-    - CONDA_RECIPE: share\git\SoftMaint\bin\conda\python-softmaint
-      CONDA_VERSION: 2
+    # - CONDA_RECIPE: share\git\SoftMaint\bin\conda\python-softmaint
+    #   CONDA_VERSION: 2
     # - CONDA_RECIPE: share\git\SoftMaint\bin\conda\python-softmaint
     #   CONDA_VERSION: 3
     - CONDA_RECIPE: share\git\ClangLite\bin\conda\llvm
