--- a/appveyor.yml
+++ b/appveyor.yml
@@ -96,16 +96,16 @@ matrix:
   fast_finish: true
   allow_failures:
     - platform: x86
-      CONDA_RECIPE: bin\conda\boost-suite
+      CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clanglite
       CONDA_VERSION: 2
     - platform: x86
-      CONDA_RECIPE: bin\conda\boost-suite
+      CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clanglite
       CONDA_VERSION: 3
     - platform: x64
-      CONDA_RECIPE: bin\conda\boost-suite
+      CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clanglite
       CONDA_VERSION: 2
     - platform: x64
-      CONDA_RECIPE: bin\conda\boost-suite
+      CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clanglite
       CONDA_VERSION: 3
 
 install:
